Use `Map.computeIfAbsent` and cleanup numerous warnings